--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,805 @@
-.App {
-  text-align: center;
+body {
+  font-family: "DM Sans", sans-serif;
+}
+.container {
+  max-width: 94%;
+  padding: 0;
+}
+ul,
+li {
+  padding: 0;
+  list-style-type: none;
+}
+a,
+button {
+  text-decoration: none;
+  transition: all 0.3s ease 0s;
+}
+a:hover {
+  text-decoration: none;
+}
+.text-colored {
+  color: #fce15a;
+}
+.col-md-custom-7 {
+  width: 14.28%;
+  max-width: 14.28%;
+}
+.row {
+  margin: 0;
+}
+.modal-open {
+  overflow-y: hidden;
+  padding-right: 0 !important;
+}
+.modal-open .modal {
+  z-index: 9999999;
+}
+.modal-backdrop.show {
+  z-index: 999999;
+}
+.btn {
+  text-transform: capitalize;
+}
+.btn-black {
+  background-color: rgba(0, 0, 0, 1);
+  border-color: rgba(0, 0, 0, 1);
+  font-size: 18px;
+  color: #ffffff;
+  padding: 12px;
+  font-weight: 500;
+}
+.btn-md {
+  padding: 12px 24px;
+  font-size: 15px;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #000000;
+}
+.btn-sm {
+  padding: 7.5px;
+  font-size: 12px;
+}
+.btn-black:hover,
+.btn-black:focus {
+  background-color: #fce15a;
+  color: #000000;
+  border-color: #fce15a;
+}
+img {
+  max-width: 100%;
+}
+.col-md-custom-5 {
+  width: 20%;
+  max-width: 20%;
+}
+.modal {
+  z-index: 999999999;
+  background-color: rgba(0, 0, 0, 0.25);
+}
+.form-control {
+  padding: 12px 15px;
+  height: auto;
+  border-radius: 3px;
+}
+.form-control:focus {
+  border: 1px solid #ced4da;
+  outline: none;
+  box-shadow: none;
+}
+label.form-label {
+  width: 100%;
+}
+/*******************footer_section****************/
+.footer_section {
+  background-color: #000000;
+  padding: 30px 0;
+}
+.footer_section .container {
+  max-width: 89%;
+}
+.single_footer {
+  margin-top: 15px;
+}
+.single_footer ul {
+  margin-bottom: 0;
+}
+.single_footer h4 {
+  font-size: 15px;
+  color: #ffffff;
+  font-weight: 700;
+}
+.footer_links li a {
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.75);
+}
+.footer_links li a:hover {
+  color: #fce15a;
+  text-decoration: none;
+}
+.footer_links li {
+  padding-bottom: 5px;
+}
+.col-md-custom-5 {
+  width: 20%;
+  max-width: 20%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.social_links li {
+  padding-right: 12px;
+}
+.social_links li a {
+  font-size: 14px;
+}
+.social_links li a {
+  padding-left: 25px;
+  position: relative;
+}
+.social_links li a i {
+  position: absolute;
+  left: 0;
+  top: 3px;
+}
+
+/*******************copyright_section*****************/
+.copyright_section {
+  padding: 15px 0;
+  border-top: 1px solid rgba(255, 255, 255, 0.25);
+  background-color: #000000;
+}
+.copyright_div p {
+  color: #ffffff;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+/*****************side_modal********************/
+.side_modal {
+  padding-right: 0 !important;
+}
+.side_modal .modal-dialog {
+  margin: 0;
+  height: 100%;
+  float: right;
+  min-width: 360px;
+  max-width: 360px;
+}
+.side_modal .modal-content {
+  height: 100%;
+  border-radius: 0;
+  border: none;
+}
+.side_modal .modal-header {
+  padding: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: flex-start;
+  font-size: 18px;
+  color: #000000;
+  font-weight: 500;
+}
+.side_modal .modal-header button {
+  margin: 0;
+}
+.side_modal .modal-header button:hover,
+.side_modal .modal-header button:active {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.side_modal .modal-header button i {
+  font-size: 16px;
+}
+.service_list li a {
+  padding: 15px;
+  display: block;
+  color: #333;
+}
+.service_list li a span {
+  margin-right: 15px;
+}
+.service_list li a:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.service_list li a span img {
+  height: 48px;
+  width: 70px;
+  border-radius: 3px;
+}
+.service_list li {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.side_modal .modal-body {
+  padding: 0;
+}
+.show_modal {
+  display: block;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.selection_modal .modal-dialog {
+  width: 90%;
+  max-width: 725px;
+  position: relative;
+  height: 100%;
+  margin: 0 auto;
+}
+.selection_modal .modal-body {
+  padding: 30px 50px;
+  max-height: 88vh;
+  overflow-y: auto;
+}
+.pest_control_modal .modal-body {
+  padding: 30px 50px 100px 50px;
+}
+.please_select .form-check {
+  padding-left: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.selection_modal .modal-header {
+  font-size: 28px;
+  font-weight: 600;
+  text-align: left;
+  padding-left: 50px;
+}
+.selection_modal .modal-header button {
+  margin: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 9;
+}
+.centered_Modal .modal-content {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 0;
+}
+.please_select h3 {
+  font-size: 22px;
+  text-align: center;
+  margin: 30px 0;
+}
+.select_container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 0;
+  cursor: pointer;
+  font-size: 15px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  line-height: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Hide the browser's default radio button */
+.select_container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.select_container .checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+/* When the radio button is checked, add a blue background */
+.select_container input:checked ~ .checkmark {
+  background-color: #000000;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.select_container .checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.select_container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.select_container .checkmark:after {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 10px;
+  height: 10px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+}
+.selecton_form .form-group {
+  margin-bottom: 0;
+  padding: 15px;
+  overflow: hidden;
+}
+.form-group-btn {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 8px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.detailed_modal .modal-dialog {
+  width: 100%;
+  max-width: 100%;
+}
+.detailed_modal .modal-header {
+  padding: 20px;
+}
+.detailed_modal .modal-header {
+  font-size: 20px;
+}
+.sservice_tabs_ul .nav {
+  width: 100%;
+  display: block;
+}
+.detailed_modal {
+  z-index: 999999;
+}
+.sservice_tabs_ul {
+  margin-top: 15px;
+}
+.sservice_tabs_ul .nav li {
+  width: 100%;
+  margin-bottom: 15px;
+  overflow: hidden;
+}
+.sservice_tabs_ul .nav li a {
+  float: right;
+  color: rgba(0, 0, 0, 0.75);
+  border-radius: 3px;
+  padding: 7px 12px;
+  font-size: 13px;
+  border: 1px solid rgba(0, 0, 0, 0.75);
+}
+.service_details_s .row {
+  width: 100%;
+}
+.service_details_s .container {
+  max-width: 100%;
+  padding-left: 100px;
+  padding-right: 0;
+}
+.sservice_tabs_ul .nav li a.active {
+  background-color: #000000;
+  color: #ffffff;
+}
+.service_details_s .col-md-3 {
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+}
+.service_tab_scroll {
+  padding: 15px;
+  max-height: 88vh;
+  overflow-y: auto;
+  padding-right: 30px;
+}
+.single_service_tab_scroll h2 {
+  font-size: 28px;
+  font-weight: 800;
+  letter-spacing: -1px;
+  text-transform: capitalize;
+  margin-bottom: 25px;
+}
+.one_service_img {
+  width: 100%;
+  height: 215px;
+  overflow: hidden;
+}
+.one_service_img img {
+  width: 100%;
+  min-height: 215px;
+}
+.one_service_div {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 15px;
+}
+.one_service_div:not(:first-child) {
+  margin: 25px 0;
+}
+.one_service_info {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.one_service_info h5 {
+  font-size: 16px;
+  margin-bottom: 5px;
+  font-weight: 900;
+}
+.service_duration {
+  font-size: 12px;
+  color: #757575;
+}
+.service_duration {
+  margin-bottom: 0;
+}
+.service_duration span {
+  padding-right: 5px;
+}
+.service_duration i {
+  font-size: 10px;
+}
+.service_duration img {
+  height: 12px;
+}
+.service_flex {
+  justify-content: space-between;
+}
+.one_service_listing {
+  width: 100%;
+  padding-top: 10px;
+  margin-bottom: 0;
+}
+.one_service_listing li {
+  font-size: 13px;
+  color: rgba(0, 0, 0, 0.75);
+  position: relative;
+  padding-left: 18px;
+}
+.one_service_listing li:not(:last-child):before {
+  content: "\2e";
+  position: absolute;
+  font-family: "Font Awesome 6 Pro" !important;
+  font-weight: 900;
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: #000000;
+  font-size: 30px;
+  line-height: 0px;
+}
+.one_service_listing li a {
+  font-size: 13px;
+  color: #000000;
+  font-weight: 700;
+  text-decoration: underline !important;
+}
+.one_service_div {
+  margin: 15px 0;
+}
+.one_service_full_info {
+  padding: 15px;
+  max-height: 88vh;
+  overflow-y: auto;
+}
+.service_details_s .col-md-4 {
+  padding-left: 0;
+}
+.one_serv_full_details {
+  margin-top: 15px;
+}
+.included_serv h4 {
+  font-size: 20px;
+  font-weight: 900;
+  margin-bottom: 15px;
+}
+.included_serv ul {
+  position: relative;
+  list-style-type: none;
+  counter-reset: css-counter 0; /* initializes counter to 0; use -1 for zero-based numbering */
+}
+.included_serv ul:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 10px;
+  right: auto;
+  background-color: #f5f5f5;
+  width: 1px;
+  z-index: -1;
+}
+.included_serv ul li {
+  counter-increment: css-counter 1; /* Increase the counter by 1. */
+  position: relative;
+  padding-left: 30px;
+}
+
+.included_serv ul li:before {
+  content: counter(css-counter);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  background-color: #cccccc;
+  border-radius: 50%;
+  font-size: 13px;
+  font-weight: 600;
+}
+.single_included_serv h6 {
+  font-weight: 600;
+}
+.one_service_full_info p {
+  font-size: 14px;
+}
+
+.check_container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 14px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.check_container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.check_container .checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 1);
+}
+/* Create the checkmark/indicator (hidden when not checked) */
+.check_container .checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.check_container input:checked ~ .checkmark:after {
+  display: block;
+}
+.check_container input:checked ~ .checkmark {
+  background-color: #000000;
+}
+
+/* Style the checkmark/indicator */
+.check_container .checkmark:after {
+  left: 5px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid #fce15a;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.form_label {
+  font-size: 15px;
+  font-weight: 600;
+  width: 100%;
+  display: block;
+}
+.apartment_type {
+  overflow: hidden;
+  clear: both;
+}
+.apartment_type .check_container {
+  width: 33.33%;
+  float: left;
+}
+.property_selection_form .form-group .check_container {
+  width: 50%;
+  float: left;
+}
+.gorm-group__btn {
+  text-align: center;
+  margin-bottom: 15px;
+  overflow: hidden;
+  clear: both;
+  display: block;
+}
+.loan_form .form-group {
+  width: 50%;
+  float: left;
+}
+.gender_flex {
+  display: flex;
+  margin-top: 10px;
+}
+.gender_flex .form-check {
+  padding-right: 15px;
+}
+.loan_form .form-label {
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.label-md {
+  font-size: 13px;
+}
+.loan_form .row {
+  margin: 0px -15px;
+}
+.form-group__btn {
+  text-align: center;
+  margin-top: 15px;
+}
+.shifting_items ul {
+  border-bottom: none;
+}
+.shifting_items li {
+  margin-right: 7.5px;
+}
+.shifting_items li a {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.75);
+  border-radius: 0 !important;
+  margin-bottom: -1px !important;
+  font-weight: 600;
+}
+.shifting_items li a.active {
+  background-color: rgba(0, 0, 0, 1) !important;
+  color: #ffffff !important;
+}
+.shifting_items {
+  margin-top: 30px;
+}
+.shifting_items .tab-content {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+.shifting_items_info {
+  padding: 15px 15px 15px 35px;
+  overflow: hidden;
+}
+.shifting_items_info ul {
+  margin-bottom: 0;
+}
+.shifting_items_info ul li {
+  width: 33.33%;
+  float: left;
+  font-size: 13px;
+  padding-left: 15px;
+  position: relative;
+  margin: 0;
+  padding: 5px 5px 5px 20px;
+  text-transform: capitalize;
+}
+.shifting_items_info ul li:after {
+  content: "\2e";
+  font-family: "Font Awesome 6 Pro";
+  font-weight: 900;
+  position: absolute;
+  left: 0;
+  font-size: 35px;
+  color: #fce15a;
+  line-height: 0;
+  top: 6px;
+}
+.shifting_items h5 {
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 7px;
+}
+.shifting_items_info h6 {
+  font-size: 15px;
+  font-weight: 800;
+}
+.modal.show {
+  display: block;
+}
+.MuiSlider-colorPrimary {
+  color: #000000 !important;
+}
+.MuiSlider-valueLabel {
+  background-color: #fce15a !important;
+  color: #ffffff !important;
+}
+.price_slide {
+  position: relative;
+  padding-bottom: 20px;
+  width: 97%;
+  margin: 0 auto;
+}
+.price_slide input {
+  position: absolute;
+  border: none;
+  bottom: 0;
+  padding: 0;
+  outline: none;
+  box-shadow: none;
+  font-size: 14px;
+  font-weight: 600;
+}
+.price_slide input.price_min {
+  left: -5px;
+}
+.price_slide input.price_max {
+  right: -5px;
+  text-align: right;
+}
+.moving_items .form-group {
+  padding-left: 0;
+  padding: 5px 0;
+}
+.moving_items .select_container {
+  font-size: 13px;
+}
+.moving_items .form-group {
+  width: 100%;
+}
+.service_details_s .container {
+  width: 100%;
+  max-width: 100% !important;
+}
+.detailedModal .modal-body {
+  padding: 30px;
+}
+.carpenter_list li {
+  position: relative;
+  padding-left: 25px;
+  font-size: 16px;
+  line-height: 28px;
+  margin-top: 10px;
+}
+.carpenter_list li:after {
+  content: "\2e";
+  font-family: "Font Awesome 6 Pro";
+  font-weight: 900;
+  position: absolute;
+  left: 0;
+  font-size: 40px;
+  color: #000000;
+  line-height: 0;
+  top: 4px;
+}
+.carpenter_list li h4 {
+  font-size: 16px;
+  font-weight: 800;
+  margin-bottom: 0;
+  line-height: 24px;
+}
+.carpenter_list li p {
+  font-size: 14px;
+  margin-bottom: 0px;
+  line-height: 24px;
+}
+.login_signup {
+  display: flex;
+}
+.login_signup a {
+  padding: 0 5px !important;
+  position: relative;
+}
+.login_signup a:not(:last-child):after {
+  position: absolute;
+  right: -3px;
+  top: 0;
+  content: "/";
 }
